Change place and date of birth to employment eligibility note

--- a/document.tex
+++ b/document.tex
@@ -37,7 +37,7 @@
 
 \printname{Andrey Rjeutski}
 \printaddress{+49 1575 7742255 \\ \href{mailto:\myemail}{\myemail}}
-\printaddress{Born 1989-04-08 in \minsk}
+\printaddress{Eligible to work in Germany for any employer}
 \printaddress{Occamstraße 21 \\ 80802 Munich}
 
 %----------------------------------------------------------------------------------------
