Add solution stack to job bullets.

--- a/document.tex
+++ b/document.tex
@@ -60,6 +60,24 @@ most of the customers liked the new look and feel.
 \item Designed an algorithm to calculate values that were missing in the data exported 
 from the old system. The old system was successfully replaced on time.
 \item Developed a SaaS solution to manage and monitor backups online.
+\item Solution stack:
+  .NET,
+  ASP.NET MVC,
+  Autofac,
+  C\#, 
+  Entity Framework,
+  JavaScript,
+  Knockout,
+  MSSQL,
+  MSTest,
+  Microsoft Enterprise Library,
+  NUnit,
+  OpenXML,
+  Perforce,
+  Selenium,
+  TFS,
+  Visual Studio,
+  WPF.
 \end{rSubsection}
 
 %------------------------------------------------
@@ -71,6 +89,20 @@ from the old system. The old system was successfully replaced on time.
 {\minsk}
 \item Created a system to present data in charts and tables. Reports were available 
 online and as PDF, PowerPoint and Excel documents.
+\item Solution stack:
+  .NET,
+  ADO.NET,
+  ASP.NET MVC,
+  C\#,
+  JavaScript,
+  Linq to SQL,
+  MSSQL,
+  Microsoft Enterprise Library,
+  NUnit,
+  OpenXML,
+  SVN,
+  Visual Studio,
+  jQuery.
 \end{rSubsection}
 
 \end{rSection}
