Add Knockout to Familiar Skills

--- a/document.tex
+++ b/document.tex
@@ -126,7 +126,7 @@ Faculty of Applied Math and Computer Science\hfill {\em \minsk}
 Languages & Proficient in English, native Russian speaker \\
 Major skills & C\#, WPF, ASP .NET MVC, Git \\
 Familiar & OpenXML, ADO .NET, Linq to SQL, Entity Framework, MSSQL, Cruise\-Control.Net, 
-SVN, TFVC, Perforce, HTML/CSS, JavaScript, Java, C++, Delphi
+SVN, TFVC, Perforce, HTML/CSS, JavaScript, Java, C++, Delphi, Knockout
 \end{tabularx}
 
 \end{rSection}
