Sort familiar skills alphabetically

--- a/document.tex
+++ b/document.tex
@@ -125,8 +125,22 @@ Faculty of Applied Math and Computer Science\hfill {\em \minsk}
 \begin{tabularx}{\linewidth}{ @{} >{\bfseries}l @{\hspace{6ex}} X }
 Languages & Proficient in English, native Russian speaker \\
 Major skills & C\#, WPF, ASP .NET MVC, Git \\
-Familiar & OpenXML, ADO .NET, Linq to SQL, Entity Framework, MSSQL, Cruise\-Control.Net, 
-SVN, TFVC, Perforce, HTML/CSS, JavaScript, Java, C++, Delphi, Knockout
+Familiar &
+ADO .NET,
+C++,
+Cruise\-Control.Net,
+Delphi,
+Entity Framework,
+HTML/CSS,
+Java,
+JavaScript,
+Knockout,
+Linq to SQL,
+MSSQL,
+OpenXML,
+Perforce,
+SVN,
+TFVC
 \end{tabularx}
 
 \end{rSection}
