Split HTML and CSS in familiar skills

--- a/document.tex
+++ b/document.tex
@@ -128,10 +128,11 @@ Major skills & C\#, WPF, ASP .NET MVC, Git \\
 Familiar &
 ADO .NET,
 C++,
+CSS,
 Cruise\-Control.Net,
 Delphi,
 Entity Framework,
-HTML/CSS,
+HTML,
 Java,
 JavaScript,
 Knockout,
