--- a/document.tex
+++ b/document.tex
@@ -64,6 +64,7 @@ from the old system. The old system was successfully replaced on time.
   .NET,
   ASP.NET MVC,
   Autofac,
+  Bootstrap,
   C\#, 
   Entity Framework,
   JavaScript,
@@ -127,6 +128,7 @@ Languages & Proficient in English, native Russian speaker \\
 Major skills & C\#, WPF, ASP .NET MVC, Git \\
 Familiar &
 ADO .NET,
+Bootstrap,
 C++,
 CSS,
 Cruise\-Control.Net,
