--- a/document.tex
+++ b/document.tex
@@ -57,6 +57,7 @@ two weeks.
 \item Changed the application to be fast and modern looking. A survey has shown that the 
 most of the customers liked the new look and feel.
 \item Managed a team of five developers in team leader's absence.
+\item Mentored junior team members.
 \item Built a desktop application for interest calculation.
 \item Designed an algorithm to calculate values that were missing in the data exported 
 from the old system. The old system was successfully replaced on time.
