Change math to mathematics

--- a/document.tex
+++ b/document.tex
@@ -116,7 +116,7 @@ online and as PDF, PowerPoint and Excel documents.
 
 \begin{rSection}{Education}
 {\bf Belarusian State University}\hfill \daterange{2007-09-01}{2012-07-01} \\
-Faculty of Applied Math and Computer Science\hfill {\em \minsk}
+Faculty of Applied Mathematics and Computer Science\hfill {\em \minsk}
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
