Change developed to programmed

--- a/document.tex
+++ b/document.tex
@@ -61,7 +61,7 @@ most of the customers liked the new look and feel.
 \item Built a desktop application for interest calculation.
 \item Designed an algorithm to calculate values that were missing in the data exported 
 from the old system. The old system was successfully replaced on time.
-\item Developed a SaaS solution to manage and monitor backups online.
+\item Programmed a SaaS solution to manage and monitor backups online.
 \item Solution stack:
   .NET,
   ASP.NET MVC,
