Change Coded to Developed

--- a/document.tex
+++ b/document.tex
@@ -51,7 +51,7 @@
 {\daterange{2012-01-01}{2015-05-01}}
 {Software Developer}
 {\minsk}
-\item Coded Microsoft Word add-ins for legal and life sciences industries.
+\item Developed Microsoft Word add-ins for legal and life sciences industries.
 \item Implemented the test harness. Time to stabilize a release was reduced from six to 
 two weeks.
 \item Changed the application to be fast and modern looking. A survey has shown that the 
