Add that interest was for corporate bonds

--- a/document.tex
+++ b/document.tex
@@ -58,7 +58,7 @@ two weeks.
 most of the customers liked the new look and feel.
 \item Managed a team of five developers in team leader's absence.
 \item Mentored junior team members.
-\item Built a desktop application for interest calculation.
+\item Built a desktop application for corporate bonds interest calculation.
 \item Designed an algorithm to calculate values that were missing in the data exported 
 from the old system. The old system was successfully replaced on time.
 \item Programmed a SaaS solution to manage and monitor backups online.
