Remove sentence about a survey

--- a/document.tex
+++ b/document.tex
@@ -54,8 +54,7 @@
 \item Developed Microsoft Word add-ins for legal and life sciences industries.
 \item Implemented the test harness. Time to stabilize a release was reduced from six to 
 two weeks.
-\item Changed the application to be fast and modern looking. A survey has shown that the 
-most of the customers liked the new look and feel.
+\item Changed the application to be fast and modern looking.
 \item Managed a team of five developers in team leader's absence.
 \item Mentored junior team members.
 \item Built a desktop application for corporate bonds interest calculation.
