--- a/document.tex
+++ b/document.tex
@@ -54,7 +54,8 @@
 \item Developed Microsoft Word add-ins for legal and life sciences industries.
 \item Implemented the test harness. Time to stabilize a release was reduced from six to 
 two weeks.
-\item Changed the application to be fast and modern looking.
+\item Completely rebuilt the user interface of the application and made it fast,
+responsive and modern looking.
 \item Built a desktop application for corporate bonds interest calculation.
 \item Designed an algorithm to calculate values that were missing in the data exported 
 from the old system. The old system was successfully replaced on time.
