Change Software Developer to Software Engineer

--- a/document.tex
+++ b/document.tex
@@ -49,7 +49,7 @@
 \begin{rSubsection}
 {\href{http://www.issoft.by/}{ISsoft}}
 {\daterange{2012-01-01}{2015-05-01}}
-{Software Developer}
+{Software Engineer}
 {\minsk}
 \item Developed Microsoft Word add-ins for legal and life sciences industries.
 \item Implemented the test harness. Time to stabilize a release was reduced from six to 
@@ -88,7 +88,7 @@ from the old system. The old system was successfully replaced on time.
 \begin{rSubsection}
 {\href{http://www.itransition.com/}{Itransition}}
 {\daterange{2010-11-01}{2011-12-01}}
-{Software Developer}
+{Software Engineer}
 {\minsk}
 \item Created a system to present data in charts and tables. Reports were available 
 online and as PDF, PowerPoint and Excel documents.
