Add Brainloop experience

--- a/document.tex
+++ b/document.tex
@@ -47,6 +47,32 @@
 \begin{rSection}{Experience}
 
 \begin{rSubsection}
+{\href{https://www.brainloop.com}{Brainloop AG}}
+{\daterange{2016-04-01}{2017-02-06}}
+{Software Engineer}
+{Munich, Germany}
+\item Developed Windows desktop application and a Microsoft Outlook add-in for file sync 
+and share service. Extracted and supported a portable library that was used by four 
+client applications on different mobile and desktop platforms. 
+\item Introduced and implemented code review process, migrated code from TFVC to Git, 
+started automated UI testing.
+\item Solution stack:
+  .NET,
+  C\#, 
+  MEF,
+  MSTest,
+  NUnit,
+  Ranorex,
+  Sqlite,
+  TFS,
+  Visual Studio,
+  WPF.
+\end{rSubsection}
+
+%------------------------------------------------
+
+
+\begin{rSubsection}
 {\href{http://www.issoft.by/}{ISsoft}}
 {\daterange{2012-01-01}{2015-05-01}}
 {Software Engineer}
