Restructure Issoft experience to keep resume one page long

--- a/document.tex
+++ b/document.tex
@@ -77,17 +77,15 @@ started automated UI testing.
 {\daterange{2012-01-01}{2015-05-01}}
 {Software Engineer}
 {\minsk}
-\item Developed Microsoft Word add-ins for legal and life sciences industries.
+\item Developed Microsoft Word add-ins for legal and life sciences industries. 
+Completely rebuilt the user interface of the application and made it fast,
+responsive and modern looking.
 \item Implemented the test harness. Time to stabilize a release was reduced from six to 
 two weeks.
-\item Completely rebuilt the user interface of the application and made it fast,
-responsive and modern looking.
 \item Built a desktop application for corporate bonds interest calculation.
-\item Designed an algorithm to calculate values that were missing in the data exported 
-from the old system. The old system was successfully replaced on time.
 \item Programmed a SaaS solution to manage and monitor backups online.
-\item Managed a team of five developers in team leader's absence.
-\item Mentored junior team members.
+\item Managed a team of five developers in team leader's absence, mentored junior team 
+members.
 \item Solution stack:
   .NET,
   ASP.NET MVC,
