--- a/document.tex
+++ b/document.tex
@@ -48,7 +48,7 @@
 
 \begin{rSubsection}
 {\href{https://www.brainloop.com}{Brainloop AG}}
-{\daterange{2016-04-01}{2017-02-06}}
+{\printdate{2016-04-01} to present}
 {Software Engineer}
 {Munich, Germany}
 \item Developed Windows desktop application and a Microsoft Outlook add-in for file sync 
