improved brainloop experience

--- a/document.tex
+++ b/document.tex
@@ -51,22 +51,24 @@
 {\printdate{2016-04-01} to present}
 {Software Engineer}
 {Munich, Germany}
-\item Developed Windows desktop application and a Microsoft Outlook add-in for file sync 
-and share service. Extracted and supported a portable library that was used by four 
-client applications on different mobile and desktop platforms. 
-\item Introduced and implemented code review process, migrated code from TFVC to Git, 
-started automated UI testing.
+\item Main developer on a portable file management library that is used by four client 
+applications on different mobile and desktop platforms, sole developer on the 
+Windows client.
+\item Implemented Microsoft Outlook add-in for file sync and share service.
+\item Improved development workflow by introducing code review process, migrating code 
+from TFVC to Git and setting up continuous automated UI testing.
 \item Solution stack:
   .NET,
   C\#, 
+  Git,
   MEF,
   MSTest,
   NUnit,
   Ranorex,
   Sqlite,
   TFS,
-  Visual Studio,
-  WPF.
+  WPF,
+  Xamarin.
 \end{rSubsection}
 
 %------------------------------------------------
