put jQuery after javascript

--- a/document.tex
+++ b/document.tex
@@ -124,14 +124,14 @@ online and as PDF, PowerPoint and Excel documents.
   ASP.NET MVC,
   C\#,
   JavaScript,
+  jQuery,
   Linq to SQL,
   MSSQL,
   Microsoft Enterprise Library,
   NUnit,
   OpenXML,
   SVN,
-  Visual Studio,
-  jQuery.
+  Visual Studio.
 \end{rSubsection}
 
 \end{rSection}
@@ -165,14 +165,14 @@ Familiar &
   HTML,
   Java,
   JavaScript,
+  jQuery,
   Knockout,
   Linq to SQL,
   MSSQL,
   OpenXML,
   Perforce,
   SVN,
-  TFVC,
-  jQuery
+  TFVC.
 \end{tabularx}
 
 \end{rSection}
