--- a/document.tex
+++ b/document.tex
@@ -54,7 +54,8 @@
 \item Main developer on a portable file management library that is used by four client 
 applications on different mobile and desktop platforms, sole developer on the 
 Windows client.
-\item Implemented Microsoft Outlook add-in for file sync and share service.
+\item Implemented Microsoft Outlook add-in for an EFSS (enterprise file sync and share) 
+service.
 \item Improved development workflow by introducing code review process, migrating code 
 from TFVC to Git and setting up continuous automated UI testing.
 \item Solution stack:
