change itransition experience

--- a/document.tex
+++ b/document.tex
@@ -117,8 +117,9 @@ members.
 {\daterange{2010-11-01}{2011-12-01}}
 {Software Engineer}
 {\minsk}
-\item Created a system to present data in charts and tables. Reports were available 
-online and as PDF, PowerPoint and Excel documents.
+\item Created a system to present sales, financial and other types of data in 
+charts and tables. Reports were available online and as PDF, PowerPoint and 
+Excel documents.
 \item Solution stack:
   .NET,
   ADO.NET,
