Update Brainloop experience

--- a/document.tex
+++ b/document.tex
@@ -56,9 +56,8 @@
 {\printdate{2016-04-01} to present}
 {Software Engineer}
 {Munich, Germany}
-\item Main developer on a portable file management library that is used by four client 
-applications on different mobile and desktop platforms, sole developer on the 
-Windows client.
+\item Developed a cross-platform Dropbox-like file management application for different
+mobile and desktop systems (Android, iOS, Windows and Windows Store).
 \item Implemented Microsoft Outlook add-in for an enterprise file sync and share 
 service.
 \item Improved development workflow by introducing code review process, migrating code 
